# rgbd_parking_finder

./: CMakeLists.txt  README.md
config/cloud_1/: config_bays_esf.cfg  config_bays_esf_fpfh.cfg  config_bays_esf_pfh.cfg  config_bays_fpfh.cfg  config_bays_pfh.cfg  config_bays_vfh.cfg  config_training_esf.cfg  config_training_esf_fpfh.cfg  config_training_esf_pfh.cfg  config_training_fpfh.cfg  config_training_pfh.cfg  config_training_vfh.cfg
config/cloud_2/: config_bays_esf.cfg  config_bays_esf_fpfh.cfg  config_bays_esf_pfh.cfg  config_bays_fpfh.cfg  config_bays_pfh.cfg  config_bays_vfh.cfg  config_training_esf.cfg  config_training_esf_fpfh.cfg  config_training_esf_pfh.cfg  config_training_fpfh.cfg  config_training_pfh.cfg  config_training_vfh.cfg
data_files/point_cloud_1/: .directory  matrices.txt  planimetry.txt
data_files/point_cloud_2/: .directory  matrices.txt  planimetry.txt
include/filemanager/: configmanager.h  featurefilemanager.h  filewriter.h  plyfilereader.h
include/ml/: adaboost.h  classifier.h  svm.h
include/segmentation/: bayfeatures.h  combined_features.h  esf_features.h  fpfh_features.h  pfh_features.h  plane_viewer.h  vfh_features.h
include/utils/: homography.h  parking_selection.h  planimetry_manager.h  point.h  rectangle.h
src/applications/: bays_detection.cpp  parking_training.cpp  planimetry.cpp
src/filemanager/: configmanager.cpp  featurefilemanager.cpp  filewriter.cpp  plyfilereader.cpp
src/ml/: adaboost.cpp  svm.cpp
src/segmentation/: bayfeatures.cpp  combined_features.cpp  esf_features.cpp  fpfh_features.cpp  pfh_features.cpp  plane_viewer.cpp  vfh_features.cpp
src/utils/: homography.cpp  parking_selection.cpp  planimetry_manager.cpp  point.cpp  rectangle.cpp
